[package]
name = "leptos-dyn-dom"
version = "0.1.0"
edition = "2021"

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = []

[dependencies]
web-sys = { version="0", features = ["Document", "Element","NodeList","MutationObserver","MutationObserverInit","MutationRecord"] }
leptos = { version = "0.8.0-rc1" }
send_wrapper = "0.6.0"