[package]
name = "leptos-posthoc"
version = "0.1.0"
edition = "2024"
authors = ["Dennis Müller <d.mueller@kwarc.info>"]
description = "A crate for dynamically hydrating static/opaque HTML using leptos components"
license = "GPL-3.0-or-later"
repository = "https://github.com/FlexiFormal/leptos-posthoc"
keywords = ["leptos", "hydrate", "HTML"]
readme = "README.md"
exclude = [".idea/*", ".zed/*", "examples/*", "target/*"]

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = []

[dependencies]
web-sys = { version = "0", features = [
    "Document",
    "Element",
    "NodeList",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
] }
leptos = { version = "0.8" }
send_wrapper = "0.6"
