[package]
name = "csr-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
leptos-dyn-dom = { path = "../../",version="0.1.0",features = ["csr"] }

wasm-bindgen = "0.2"
leptos = { version = "0.7.0-beta5", features = ["csr"] }
console_error_panic_hook = "0.1.7"
wee_alloc = "*"
thaw = "0.4.0-beta3"